# ba_gpt_next

./: .env.example  .gitignore  README.md  package-lock.json  pyproject.toml
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  config.ts  index.css  main.tsx
outputs/: functional_spec_project_20251121_163334.md  functional_spec_project_20251121_172344.md  functional_spec_project_20251124_183519.md  functional_spec_project_20251124_202257.md  functional_spec_project_20251124_235946.md  functional_spec_project_20251125_170216.md  functional_spec_project_20251125_174651.md  functional_spec_project_20251126_143530.md  functional_spec_project_20251215_154125.md  functional_spec_project_20251215_164043.md  transcripts.jsonl
outputs/diagrams/: as-is_access-request-approval_20251124_235837.dot  as-is_access-request-support_20251124_235946.dot  as-is_analytics-insights-gathering_20251215_154116.dot  as-is_case-resolution-tracking_20251124_183131.dot  as-is_case-resolution-workflow_20251121_163334.dot  as-is_case-triage-and-assignment_20251124_183519.dot  as-is_checkout-flow_20251215_164035.dot  as-is_client-onboarding_20251124_202257.dot  as-is_customer-query-resolution_20251215_153657.dot  as-is_customer-support-request-submission_20251125_170216.dot  as-is_customer-ticket-resolution_20251215_154116.dot  as-is_data-analysis-and-reporting_20251215_153657.dot  as-is_demand-forecasting_20251215_172159.dot  (+63 more)
(+38 files in other folders)
