[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ba-interview-agent"
version = "0.1.0"
description = "Business Analyst interviewing agent built with Microsoft Agent Framework"
requires-python = ">=3.10"
readme = "README.md"
authors = [
    { name = "Interviewing Agent Team" }
]
dependencies = [
    "agent-framework>=1.0.0b251028",
    "agent-framework-devui>=1.0.0b251028",
    "packaging>=23.0",
    "redis>=5.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "fpdf2>=2.7.8"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.setuptools.packages.find]
where = ["src"]
